welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:5: error: ';' expected but 'if' found.
	}if (vacation && day < 6){
         ^alarmClock:27: error: Unmatched closing brace '}' ignored here
 }
 ^